# HTML_fragmentation

./: .env  .env.sample  README.md  docker-compose-test.yml  docker-compose.yml  msg_split.py  test.py
backend/: Dockerfile  README.md  msg_split.py  pyproject.toml  test.py
backend/tests/: test_msg_split.py
test/: test_msg_split.py
