[tool.poetry]
name = "html-fragmentation"
version = "0.1.0"
description = ""
authors = ["borsh130894 <borsh130894@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
